[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/mainThem.tres" type="Theme" id=1]
[ext_resource path="res://UI/PlayerHud.gd" type="Script" id=2]
[ext_resource path="res://Texture/star_08.png" type="Texture" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.22043, 0.424731, 0.688172, 0.811828, 1 )
colors = PoolColorArray( 1, 0.92549, 0.152941, 1, 0.113725, 0.168627, 0.32549, 1, 1, 0.639216, 0, 1, 1, 0, 0.301961, 1, 0.670588, 0.321569, 0.211765, 1, 0.160784, 0.678431, 1, 1 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )

[node name="GameStats" type="Panel" parent="Control"]
visible = false
anchor_right = 1.0
margin_bottom = 42.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/GameStats"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 2

[node name="Label" type="Label" parent="Control/GameStats/HBoxContainer"]
margin_left = 711.0
margin_top = 1.0
margin_right = 953.0
margin_bottom = 40.0
text = "Number Boxes"

[node name="NumBox" type="Label" parent="Control/GameStats/HBoxContainer"]
margin_left = 957.0
margin_top = 1.0
margin_right = 1024.0
margin_bottom = 40.0
text = "001"

[node name="Faild" type="CenterContainer" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Restart" type="Panel" parent="Control/Faild"]
margin_left = 337.0
margin_top = 225.0
margin_right = 687.0
margin_bottom = 375.0
rect_min_size = Vector2( 350, 150 )
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Faild/Restart"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
alignment = 1

[node name="Label" type="Label" parent="Control/Faild/Restart/VBoxContainer"]
margin_top = 4.0
margin_right = 340.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "Failed"
align = 1

[node name="Label2" type="Label" parent="Control/Faild/Restart/VBoxContainer"]
margin_top = 47.0
margin_right = 340.0
margin_bottom = 86.0
size_flags_horizontal = 3
text = "Press R to Restart"
align = 1

[node name="MainMenu" type="Button" parent="Control/Faild/Restart/VBoxContainer"]
margin_top = 90.0
margin_right = 340.0
margin_bottom = 135.0
text = "Main Menu"

[node name="Won" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="CPUParticles2D2" type="CPUParticles2D" parent="Control/Won"]
position = Vector2( 641, -16 )
amount = 50
lifetime = 8.0
texture = ExtResource( 3 )
emission_shape = 2
emission_rect_extents = Vector2( 800, 1 )
gravity = Vector2( 0, 200 )
scale_amount = 0.25
color_ramp = SubResource( 1 )

[node name="Restart" type="Panel" parent="Control/Won"]
margin_left = 337.0
margin_top = 225.0
margin_right = 687.0
margin_bottom = 375.0
rect_min_size = Vector2( 350, 150 )
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Won/Restart"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
alignment = 1

[node name="Label" type="Label" parent="Control/Won/Restart/VBoxContainer"]
margin_right = 340.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "Cleared"
align = 1

[node name="Label2" type="Label" parent="Control/Won/Restart/VBoxContainer"]
margin_top = 43.0
margin_right = 340.0
margin_bottom = 105.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Well Done !"
align = 1
valign = 1

[node name="nextLeaverLoading" type="ProgressBar" parent="Control/Won/Restart/VBoxContainer"]
margin_top = 109.0
margin_right = 340.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
percent_visible = false

[node name="NextStange" type="Timer" parent="Control/Won"]
wait_time = 4.0

[node name="CPUParticles2D" type="CPUParticles2D" parent="Control/Won"]
position = Vector2( 641, -16 )
amount = 15
lifetime = 8.0
texture = ExtResource( 3 )
emission_shape = 2
emission_rect_extents = Vector2( 800, 1 )
scale_amount = 0.25
color_ramp = SubResource( 1 )

[connection signal="gui_input" from="Control/Faild" to="." method="_on_Faild_gui_input"]
[connection signal="pressed" from="Control/Faild/Restart/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="timeout" from="Control/Won/NextStange" to="." method="_on_NextStange_timeout"]
